[gd_scene load_steps=43 format=2]

[ext_resource path="res://assets/shadow.png" type="Texture" id=1]
[ext_resource path="res://scripts/Horse.gd" type="Script" id=2]
[ext_resource path="res://assets/horse_0.png" type="Texture" id=3]
[ext_resource path="res://assets/horse_1.png" type="Texture" id=4]
[ext_resource path="res://assets/horse_2.png" type="Texture" id=5]
[ext_resource path="res://assets/mimick_1.png" type="Texture" id=6]
[ext_resource path="res://assets/mimick_2.png" type="Texture" id=7]
[ext_resource path="res://assets/mimick_3.png" type="Texture" id=8]
[ext_resource path="res://assets/mimick_4.png" type="Texture" id=9]
[ext_resource path="res://assets/mimick_5.png" type="Texture" id=10]
[ext_resource path="res://assets/mimick_0.png" type="Texture" id=11]
[ext_resource path="res://assets/sand_0.png" type="Texture" id=12]
[ext_resource path="res://assets/devil_2.png" type="Texture" id=13]
[ext_resource path="res://assets/mummy_0.png" type="Texture" id=14]
[ext_resource path="res://assets/sand_1.png" type="Texture" id=15]
[ext_resource path="res://assets/devil_1.png" type="Texture" id=16]
[ext_resource path="res://assets/devil_0.png" type="Texture" id=17]
[ext_resource path="res://assets/mummy_2.png" type="Texture" id=18]
[ext_resource path="res://assets/sand_2.png" type="Texture" id=19]
[ext_resource path="res://assets/sand_3.png" type="Texture" id=20]
[ext_resource path="res://assets/mummy_1.png" type="Texture" id=21]
[ext_resource path="res://assets/cow_1.png" type="Texture" id=22]
[ext_resource path="res://assets/cow_2.png" type="Texture" id=23]
[ext_resource path="res://assets/cow_0.png" type="Texture" id=24]
[ext_resource path="res://assets/truck_0.png" type="Texture" id=25]
[ext_resource path="res://assets/truck_2.png" type="Texture" id=26]
[ext_resource path="res://assets/truck_1.png" type="Texture" id=27]
[ext_resource path="res://assets/truck_3.png" type="Texture" id=28]
[ext_resource path="res://assets/bread_2.png" type="Texture" id=29]
[ext_resource path="res://assets/bread_1.png" type="Texture" id=30]
[ext_resource path="res://assets/bread_0.png" type="Texture" id=31]
[ext_resource path="res://assets/fire_2.png" type="Texture" id=32]
[ext_resource path="res://assets/fire_0.png" type="Texture" id=33]
[ext_resource path="res://assets/fire_1.png" type="Texture" id=34]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 31 ), ExtResource( 30 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "bread",
"speed": 3.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "cow",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 16 ), ExtResource( 13 ) ],
"loop": true,
"name": "devil",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 34 ), ExtResource( 32 ) ],
"loop": true,
"name": "fire",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "horse",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": false,
"name": "mimick",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 21 ), ExtResource( 18 ) ],
"loop": true,
"name": "mummy",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 15 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": false,
"name": "sand",
"speed": 3.0
}, {
"frames": [ ExtResource( 25 ), null, ExtResource( 26 ), null, ExtResource( 25 ), null, ExtResource( 26 ), null ],
"loop": false,
"name": "tick",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 27 ), ExtResource( 26 ), ExtResource( 28 ) ],
"loop": true,
"name": "truck",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=3]
interpolation_mode = 2
offsets = PoolRealArray( 0, 0.664516, 1 )
colors = PoolColorArray( 0.90625, 0.653916, 0.172187, 1, 0.827451, 0.384314, 0.227451, 1, 0.827451, 0.384314, 0.227451, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 32, 32, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 141.39
gravity = Vector3( 0, 98, 0 )
initial_velocity = 200.99
initial_velocity_random = 0.65
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 100.0
scale = 12.0
color_ramp = SubResource( 4 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.535484, 1 )
colors = PoolColorArray( 0.995605, 0.506346, 0.0265495, 1, 0.972549, 0.266667, 0.172549, 1, 0.972549, 0.266667, 0.172549, 0 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 32, 32, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 180.0
gravity = Vector3( 0, -100, 0 )
initial_velocity = 29.7
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 8.0
color_ramp = SubResource( 9 )

[node name="Horse" type="Area2D"]
script = ExtResource( 2 )

[node name="RemoveTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Icon" type="AnimatedSprite" parent="."]
position = Vector2( 0, -48 )
scale = Vector2( 4, 4 )
frames = SubResource( 2 )
animation = "horse"
frame = 1
playing = true

[node name="ExplosionParticles" type="Particles2D" parent="."]
position = Vector2( 0, -32 )
emitting = false
amount = 200
one_shot = true
explosiveness = 1.0
randomness = 0.3
process_material = SubResource( 5 )

[node name="FireParticles" type="Particles2D" parent="."]
position = Vector2( 0, -32 )
emitting = false
amount = 16
process_material = SubResource( 8 )

[connection signal="timeout" from="RemoveTimer" to="." method="_on_MimickTimer_timeout"]
[connection signal="animation_finished" from="Icon" to="." method="_on_Icon_animation_finished"]
